# ml-project-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  dvc.yaml  pyproject.toml
artefacts/: .gitignore
prophet/: config.py  data.py  dataset_builder.py  evaluator.py  text_classifier.py  trainer.py
tests/: test_text_classifier.py
